# votemarket-sp1

./: .dockerignore  .env.example  .gitignore  .vkey  .vkey.prod  Cargo.toml  LICENSE  README.md  SPEC.md  justfile  toolkit-requirements.in
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
program/: Cargo.toml
program/src/: main.rs
script/: .env.example  Cargo.toml  toolkit_adapter.py
script/input/: input.json.example
script/output/: output.json.example
script/src/: config.rs  helpers.rs  input.rs  main.rs  proof.rs  protocol.rs  rpc.rs  toolkit.rs  types.rs
shared/: Cargo.toml
shared/src/: encoding.rs  lib.rs  protocol.rs
