[package]
name = "program"
version = "0.1.0"
edition = "2021"

# WARNING: Changing any dependency version will change the VKEY
# and require redeploying the on-chain verifier contract.
# Use exact versions (=x.y.z) to prevent accidental changes.

[dependencies]
sp1-zkvm = "=6.3.0"
alloy-primitives = { version = "=0.8.14", default-features = false }
alloy-rlp = { version = "=0.3.9", features = ["derive"] }
alloy-sol-types = { version = "=0.8.14", default-features = false }
alloy-trie = "=0.7.9"
sha3 = "=0.10.8"
serde = { version = "=1.0.228", features = ["derive"] }
shared = { path = "../shared" }
thiserror = "=1.0.69"
eth_trie = "=0.4.0"
ethereum-types = "=0.14.1"

[dev-dependencies]
hex = "=0.4"
