[package]
name = "script"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = "3.0.0"
shared = { path = "../shared" }
alloy-primitives = { version = "0.8.14", features = ["serde", "rlp"] }
alloy-rlp = { version = "0.3.12", features = ["derive"] }
eth_trie = "0.4"
sha3 = "0.10"
hex-literal = "0.4"
tokio = { version = "1.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
