[package]
name = "script"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { version = "5.2", default-features = false, features = ["network"] }
shared = { path = "../shared" }
alloy-primitives = { version = "0.8.14", features = ["serde", "rlp"] }
alloy-sol-types = "0.8"
rlp = "0.5"
sha3 = "0.10"
tokio = { version = "1.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
