[package]
name = "script"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { version = "=6.3.0", default-features = false, features = [
    "network",
] }
shared = { path = "../shared" }
alloy-primitives = { version = "=0.8.14", features = ["serde", "rlp"] }
alloy-sol-types = "=0.8.14"
rlp = "=0.5.2"
sha3 = "=0.10.8"
tokio = { version = "=1.49.0", features = ["full"] }
serde = "=1.0.228"
serde_json = "=1.0.149"
reqwest = { version = "=0.12.28", features = ["json", "rustls-tls"] }
dotenvy = "=0.15.7"

[dev-dependencies]
hex = "=0.4"
